<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <MultiSelectListPreference
        android:key="list_sources"
        android:title="@string/list_sources_title"
        android:entries="@array/sources_name"
        android:icon="@drawable/ic_sources"
        android:entryValues="@array/sources_id"
        android:defaultValue="@array/sources_id"
        android:dialogTitle="@string/list_sources_dialog_title"
        android:summary="@string/list_sources_desc"/>

    <ListPreference
        android:key="list_durations"
        android:title="@string/list_durations_title"
        android:entries="@array/durations"
        android:icon="@drawable/ic_updates"
        android:defaultValue="@string/duration_default"
        android:entryValues="@array/durations"
        android:dialogTitle="@string/list_durations_dialog_title"
        android:summary="@string/list_durations_desc" />


</PreferenceScreen>